--- a/templates/adminer/pattern/pattern_create.html
+++ b/templates/adminer/pattern/pattern_create.html
@@ -29,7 +29,7 @@
                 <div class="d-flex mt-3">
                     <a href="{% url 'adminer:pattern' %}" type="submit" class="btn btn-secondary"
                        style="margin-right: 5px;">Отмена</a>
-                    <button type="submit" class="btn btn-primary">Сохранить</button>
+                    <button type="submit" class="btn btn-primary" id="form_pattern_edit_send_pat">Сохранить</button>
                 </div>
             </form>
             <br>
