--- a/templates/adminer/pattern/pattern.html
+++ b/templates/adminer/pattern/pattern.html
@@ -32,7 +32,7 @@
                 {% for pattern in patterns %}
                     <tr>
                         <th scope="row">{{ pattern.id }}</th>
-                        <td class="text-center">{{ pattern.title }}</td>
+                        <td class="text-left">{{ pattern.title }}</td>
                         <td class="text-center">{{ pattern.date_created|date:'Y-m-d H:i'}}</td>
                         <td class="text-center">{{ pattern.date_update|date:'Y-m-d H:i' }}</td>
                         <td>
