--- a/templates/adminer/polls/polls.html
+++ b/templates/adminer/polls/polls.html
@@ -54,7 +54,7 @@
                         {% for poll in polls %}
                             <tr>
                                 <th scope="row">{{ poll.id }}</th>
-                                <td class="text-center"><a href="{% url "adminer:polls_show" poll.id %}">{{ poll.title }}</a></td>
+                                <td class="text-left"><a href="{% url "adminer:polls_show" poll.id %}">{{ poll.title }}</a></td>
                                 <td class="text-center">{{ poll.date_created|date:'Y-m-d H:i' }}</td>
                                 <td class="text-center">{{ poll.date_updated|date:'Y-m-d H:i' }}</td>
                                 <td>
@@ -98,7 +98,7 @@
                         {% for poll in polls_start %}
                             <tr>
                                 <th scope="row">{{ poll.id }}</th>
-                                <td class="text-center"><a href="{% url "adminer:polls_show" poll.id %}">{{ poll.title }}</a></td>
+                                <td class="text-left"><a href="{% url "adminer:polls_show" poll.id %}">{{ poll.title }}</a></td>
                                 <td class="text-center">{{ poll.date_created|date:'Y-m-d H:i' }}</td>
                                 <td class="text-center">{{ poll.date_updated|date:'Y-m-d H:i' }}</td>
                                 <td>
@@ -145,7 +145,7 @@
                         {% for poll in polls_end %}
                             <tr>
                                 <th scope="row">{{ poll.id }}</th>
-                                <td class="text-center"><a href="{% url "adminer:polls_show" poll.id %}">{{ poll.title }}</a></td>
+                                <td class="text-left"><a href="{% url "adminer:polls_show" poll.id %}">{{ poll.title }}</a></td>
                                 <td class="text-center">{{ poll.date_created|date:'Y-m-d H:i' }}</td>
                                 <td class="text-center">{{ poll.date_updated|date:'Y-m-d H:i' }}</td>
                                 <td>
