--- a/templates/adminer/polls/polls_create.html
+++ b/templates/adminer/polls/polls_create.html
@@ -65,7 +65,7 @@
                 <div class="d-flex mt-3">
                     <a href="{% url 'adminer:polls' %}" type="submit" class="btn btn-secondary"
                        style="margin-right: 5px;">Отмена</a>
-                    <button type="submit" class="btn btn-primary">Сохранить</button>
+                    <button type="submit" class="btn btn-primary" id="form_pattern_edit_send">Сохранить</button>
                 </div>
             </form>
             <br>
