--- a/templates/adminer/question/edit.html
+++ b/templates/adminer/question/edit.html
@@ -74,8 +74,10 @@
                         <div style="display: flex; width: 94%; margin-left: 5px;">
                             <input type="text" class="form-control" value="{{ question.title }}"
                                    name="question[{{ question.id }}]['title']" required
-                                   placeholder="Введите текст показателя" style="margin-right: 10px;">
-                            <button class="btn btn-danger delete_question" data-id="{{ question.id }}"><i
+                                   placeholder="Введите текст показателя" style="margin-right: 5px;">
+                            <input type="number" class="form-control" value="{{ question.sort }}" min="0" name="question[{{ question.id }}]['sort']"
+                                   placeholder="Сорт." style="width: 90px" title="Сортировка">
+                            <button class="btn btn-danger delete_question" data-id="{{ question.id }}" style="margin-left: 5px;"><i
                                     class="fas fa-trash-alt"></i></button>
                         </div>
                     </div>
