--- a/templates/adminer/question/edit.html
+++ b/templates/adminer/question/edit.html
@@ -23,16 +23,16 @@
                         <div class="box_answer" id="box_answer_{{ answer.id }}"
                              data-id="{{ answer.id }}">
                             <input type="text" class="form-control" value="{{ answer.title }}"
-                                   name="question[{{ question.id }}]['answer'][{{ answer.id }}]"
+                                   name="question[{{ questions.0.id }}]['answer'][{{ answer.id }}]"
                                    required placeholder="Введите текст оценки">
                             <input type="number" class="form-control" value="{{ answer.sort }}" min="0"
-                                   name="question[{{ question.id }}]['sort'][{{ answer.id }}]"
+                                   name="question[{{ questions.0.id }}]['sort'][{{ answer.id }}]"
                                    placeholder="Сорт." style="width: 90px; margin-left: 5px" title="Сортировка">
                             <button class="btn btn-danger answer_delete" data-id="{{ answer.id }}"
-                                    data-question="{{ question.id }}"><i class="fas fa-trash-alt"></i>
+                                    data-question="{{ questions.0.id }}"><i class="fas fa-trash-alt"></i>
                             </button>
                             <span class="cost-answer"
-                                  id="question[{{ question.id }}]['cost'][{{ answer.id }}]">{{ answer.cost }}</span>
+                                  id="question[{{ questions.0.id }}]['cost'][{{ answer.id }}]">{{ answer.cost }}</span>
                             <br>
                         </div>
                     {% endfor %}
