New sort. Added arrow

--- a/templates/adminer/polls/polls_edit.html
+++ b/templates/adminer/polls/polls_edit.html
@@ -90,8 +90,8 @@
                 <div class="d-flex mt-3">
                     <a href="{% url 'adminer:polls' %}" type="submit" class="btn btn-secondary"
                        style="margin-right: 5px;">Отмена</a>
-                    <button type="submit" class="btn btn-success" id="form_pattern_edit_reload" style="margin-right: 5px;">Обновить</button>
-                    <button type="submit" class="btn btn-primary" id="form_pattern_edit_send">Сохранить</button>
+                    <button type="button" class="btn btn-success" id="form_pattern_edit_reload" style="margin-right: 5px;">Обновить</button>
+                    <button type="button" class="btn btn-primary" id="form_pattern_edit_send">Сохранить</button>
                 </div>
             </form>
             <br>
