--- a/templates/adminer/question/create.html
+++ b/templates/adminer/question/create.html
@@ -21,8 +21,8 @@
                 <div class="box_answer" id="box_answer_1" data-id="1">
                     <input type="text" class="form-control" value="" name="question[1]['answer'][1]"
                            required placeholder="Введите текст оценки">
-                    <input type="number" class="form-control" value="1" min="0" name="question[1]['sort'][1]"
-                           placeholder="Сорт." style="width: 90px; margin-left: 5px" title="Сортировка">
+                    <button class="btn btn-primary arrow_up"><i class="fas fa-arrow-up"></i></button>
+                    <button class="btn btn-primary arrow_down"><i class="fas fa-arrow-down"></i></button>
                     <button class="btn btn-danger answer_delete" data-id="1" data-question="1"><i
                             class="fas fa-trash-alt"></i></button>
                     <span class="cost-answer" id="question[1]['cost'][1]">0</span>
@@ -31,8 +31,8 @@
                 <div class="box_answer" id="box_answer_2" data-id="2">
                     <input type="text" class="form-control" value="" name="question[1]['answer'][2]"
                            required placeholder="Введите текст оценки">
-                    <input type="number" class="form-control" value="2" min="0" name="question[1]['sort'][2]"
-                           placeholder="Сорт." style="width: 90px; margin-left: 5px" title="Сортировка">
+                    <button class="btn btn-primary arrow_up"><i class="fas fa-arrow-up"></i></button>
+                    <button class="btn btn-primary arrow_down"><i class="fas fa-arrow-down"></i></button>
                     <button class="btn btn-danger answer_delete" data-id="2" data-question="1"><i
                             class="fas fa-trash-alt"></i></button>
                     <span class="cost-answer" id="question[1]['cost'][2]">100</span>
@@ -46,7 +46,7 @@
     </div>
 
     <h4>Добавление показателей</h4>
-    <div style="background-color: gainsboro;border-radius: 8px;padding: 10px;">
+    <div style="background-color: gainsboro;border-radius: 8px;padding: 10px;" class="box-q">
         <div class="box-master" id="question_box_1" data-id="1">
             <div class="box">
                 <div class="item">
@@ -54,9 +54,9 @@
                         <input type="text" class="form-control" value="" name="question[1]['title']"
                                required
                                placeholder="Введите текст показателя" style="margin-right: 5px;">
-                        <input type="number" class="form-control" value="1" min="0" name="question[1]['sort']"
-                           placeholder="Сорт." style="width: 90px" title="Сортировка">
-                        <button class="btn btn-danger delete_question" data-id="1"  style="margin-left: 5px;"><i
+                        <button class="btn btn-primary arrow_up_q"><i class="fas fa-arrow-up"></i></button>
+                        <button class="btn btn-primary arrow_down_q" style="margin-left: 5px;"><i class="fas fa-arrow-down"></i></button>
+                        <button class="btn btn-danger delete_question" data-id="1" style="margin-left: 5px;"><i
                                 class="fas fa-trash-alt"></i></button>
                     </div>
                 </div>
