--- a/templates/adminer/polls/polls_statistic.html
+++ b/templates/adminer/polls/polls_statistic.html
@@ -31,10 +31,10 @@
                     <h1 style="color: black;" class="h_poll" data-id="{{ poll.id }}">{{ poll.title }}</h1>
                     <p>{{ poll.description }}</p>
                 </div>
-                <div class="head-form">
+                <div class="head-form" style="display:block;">
                     <div class="d-flex justify-content-between align-item-center">
                         <div>Статус: {{ poll.status }}</div>
-                        <div>Ответов пользователей: {{ poll.answer_user }}</div>
+                        <div>Ответов пользователей: {{ count_user }}</div>
                     </div>
                     <div class="d-flex justify-content-between align-item-center">
                         {% if poll.date_created %}
@@ -50,7 +50,7 @@
                     </div>
                 </div>
 
-                <div class="head-form">
+                <div class="head-form" style="display:block;">
                     <div class="form-group">
                         <h3>Выберите категорию</h3>
                         <select class="form-select select_category">
@@ -63,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="head-form">
+                <div class="head-form" style="display:block;">
                     <h3>Векторы средней оценки с учетом компетентности экспертов</h3>
                     <div>
                         <br>
@@ -88,13 +88,13 @@
                     <br>
                     <div id="chart_div"></div>
                 </div>
-                <div class="head-form">
+                <div class="head-form" style="display:block;">
                     <h3>Согласованность оценок по шкале Харрингтона: <br>
                         <span style="color: red" class="math4">{{ list_math.word }}</span>
                     </h3>
                     <br>
                 </div>
-                <div class="head-form">
+                <div class="head-form" style="display:block;">
                     <h3>Согласованность оценок по шкале Пирсона: <br><span
                             style="color: red" class="math5">{{ list_math.coord }}</span></h3>
                     <br>
