Fix css statistic

--- a/templates/adminer/polls/polls_statistic.html
+++ b/templates/adminer/polls/polls_statistic.html
@@ -16,13 +16,14 @@
         }
 
         .head-form {
+            width: 100%;
             height: auto;
         }
     </style>
 
     <div style="background-color: #F0EBF8">
         <div class="d-flex">
-            <div class="mx-auto">
+            <div class="container">
                 <br>
                 <button class="btn btn-secondary ripple-surface" onclick="window.location.href='{% url 'adminer:polls' %}'">Отмена</button>
                 <button class="btn btn-primary" id="print_pdf">Печать PDF</button>
