Fix css statistic 4

--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -5,7 +5,7 @@
 <div style="background-color: #F0EBF8">
     <div class="d-flex">
         <div class="mx-auto">
-            <div class="head-form">
+            <div class="head-form" style="display: block">
                 <div class="color-line"></div>
                 <h1 style="color: black;">{{ poll.title }}</h1>
                 <p>{{ poll.description }}</p>
