--- a/templates/adminer/polls/polls_edit.html
+++ b/templates/adminer/polls/polls_edit.html
@@ -69,7 +69,7 @@
                                             <input type="text" class="form-control" value="{{ category.questions.0.title }}" name="category[{{ category.id }}]['title']" disabled>
                                         </div>
                                     </div>
-                                    <div class="item" id="container_answer_{{ category.id }}">
+                                    <div class="item" id="container_category_{{ category.id }}">
                                         {% for answer in category.questions.0.answers %}
                                             <div class="box_answer" id="box_answer_{{ answer.id }}" data-id="{{ answer.id }}" style="width: 80%;">
                                                 <input type="text" class="form-control" value="{{ answer.title }}" name="category[{{ category.id }}]['answer'][{{ answer.id }}]" disabled>
