--- a/templates/adminer/polls/polls_show.html
+++ b/templates/adminer/polls/polls_show.html
@@ -14,7 +14,7 @@
     </style>
 
     <div class="mx-auto block-info" id="block_btn" style="width: 34%;">
-        <a href="#" onclick="history.back();" class="btn btn-secondary">Назад</a>
+        <a href="{% url 'adminer:polls' %}" class="btn btn-secondary">Назад</a>
         {% if not poll.date_start and not poll.date_end %}
             <button class="btn btn-success" id="start_poll" data-id="{{ poll.id }}">Начать</button>
         {% elif poll.date_start and not poll.date_end %}
